--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div id="content">
             <!-- *********** INFORMATION *********** -->
 
-            <div id="information" >
+            <div id="information">
                 <h2 style="color: white;">Information</h2>
                 <div class="tile-container">
                     <script>
@@ -234,7 +234,8 @@
             </div>
 
             <div id="about_us" style="display: flex; flex-direction: column; gap: var(--gutter-m);">
-                <h2 style="margin-top: var(--gutter-m); text-align:center;">About Us (Dit is een footer, Milan.)</h2>
+                <h2 style="text-align:center; color: white;">About Us (Dit is een footer,
+                    Milan.)</h2>
                 <div class="content">
                     <!-- <iframe loading="lazy" allowfullscreen width=100%, heigth=300
                         referrerpolicy="no-referrer-when-downgrade"
@@ -332,6 +333,10 @@
             defer>
             </script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        
+        <footer >
+            <p style="font-size: .6em;">Copyright © 2023 Life Below Water, UvA 🫧</p>
+        </footer>
     </div>
 </body>
 
